== 0.2.0 

* Make sure sms utility gracefully handles missing recipient/message

* Added balance query support to API and SMS utility (--check-balance).

== 0.1.0 2007-08-17

* Initial release.